2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* gnotski.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2005-07-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/*:
	* help/C/gnotski.xml: Bumped the version number for 2.12 and redid
	the screenshots.

2005-07-11  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Remove hint support. There was only partial coverage,
	and this sort of information is better suited for a wiki. Make
	ui_description readonly.

2005-05-09  Alan Horkan <horkana tcd ie>

	* help/C/gnotski.xml: Removed Known Bugs sections where not
	needed.
	
2005-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotski.c: Debranding.

2005-04-22  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c : Alan Horkan's PgUp/Dn puzzle switching feature request
	has been implemented.
	(new_move): Support undo of last move. If you move a block around, 
	but eventually return it to the original position, it won't count
	against you. Moves prior to the last move can not be undone.

2005-03-31  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (prepare_map): Just give the puzzle name, not "Level #:..."
	(new_move): Mark moves label for translation.

2005-03-21  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c : Minor code updates and clean up functions that didn't
	need prototypes and could use 'static' instead. 
	Use games-stock items.
	(creates_statusbar): Status now resembles gnomine and same-gnome.
	(button_release_space): Win message shortened.
	(update_menu_state): Moved, use new GtkAction functions.

2005-03-17  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (new_move): Ensure that no moves means no prior piece.

2005-03-16  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (configure_pixmaps_idle): Show error then exit when 
	rendering fails, removing stand-in pixbuf since it is no longer needed.
	(new_move): Don't add to the move total when it's the same piece 
	moved as last time.