@@ -1,3 +1,8 @@
+2006-03-22  Callum McKenzie  <callum@spooky-possum.org>
+
+	* help/C/gnotski.xml: Add an authors section and a license
+	section.
+
 2006-01-17  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gnotski.c: Patch from Scott Bronson to ensure user-edited
